[package]
name = "brainwires-network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Agent-to-agent networking — IPC, remote bridge, mesh networking, routing, and discovery for Brainwires"
readme = "README.md"
documentation = "https://docs.rs/brainwires-network"
keywords = ["mcp", "ipc", "mesh-networking", "agent-communication", "topology"]
categories = ["network-programming"]

[dependencies]
# Core framework
brainwires-core = { workspace = true }
brainwires-mcp-client = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "time", "macros", "net", "process", "fs", "rt", "rt-multi-thread"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto (IPC encryption)
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }

# HTTP client
reqwest = { workspace = true }
regex = { workspace = true }

# Time & identifiers
chrono = { workspace = true }
uuid = { workspace = true }

# WebSocket (Supabase Realtime)
tokio-tungstenite = { workspace = true }
url = { workspace = true }

# Hostname detection
gethostname = { workspace = true }

# Compression (attachments)
flate2 = { workspace = true }
zstd = { workspace = true }

# A2A protocol (optional, for A2A transport)
brainwires-a2a = { workspace = true, optional = true, features = ["client"] }

# Keyring (optional, for secure API key storage)
keyring = { workspace = true, optional = true }

# Analytics
brainwires-telemetry = { workspace = true, optional = true }

# ── Channels deps (absorbed from brainwires-channels) ─────────────────────
schemars = { workspace = true, features = ["uuid1", "chrono04"] }
bitflags = { workspace = true }
webrtc          = { version = "0.20.0-alpha.1", git = "https://github.com/Brainwires/webrtc-rs", rev = "a0c7a51876a44758448e7d5a76dea06aca653203", optional = true }
rtc             = { version = "0.20.0-alpha.1", git = "https://github.com/Brainwires/webrtc-rs", rev = "a0c7a51876a44758448e7d5a76dea06aca653203", package = "rtc",             optional = true }
rtc-interceptor = { version = "0.20.0-alpha.1", git = "https://github.com/Brainwires/webrtc-rs", rev = "a0c7a51876a44758448e7d5a76dea06aca653203", package = "rtc-interceptor", optional = true }
rtc-ice         = { version = "0.20.0-alpha.1", git = "https://github.com/Brainwires/webrtc-rs", rev = "a0c7a51876a44758448e7d5a76dea06aca653203", package = "rtc-ice",         optional = true }
bytes           = { workspace = true, optional = true }

# LAN tooling deps (lan feature) — moved from brainwires-hardware
network-interface = { version = "2", optional = true }
ipnetwork = { version = "0.21", optional = true, features = ["serde"] }
pnet = { version = "0.35", optional = true }
pnet_datalink = { version = "0.35", optional = true }

[features]
default = ["client", "ipc-transport", "remote-transport"]
client = ["dep:brainwires-mcp-client"]
ipc-transport = []
remote-transport = []
tcp-transport = []
pubsub-transport = []
a2a-transport = ["dep:brainwires-a2a"]
mesh = ["tcp-transport"]
registry-discovery = []
full = ["mesh", "a2a-transport", "pubsub-transport", "registry-discovery"]
auth-keyring = ["keyring"]
telemetry = ["dep:brainwires-telemetry", "brainwires-telemetry/native"]
# Internet-facing agent email identity (send/receive via Mailgun, Postmark, Resend, or custom endpoint)
email-identity = []
# Channels (absorbed from brainwires-channels)
channels = []
channels-webrtc = ["channels", "dep:webrtc", "dep:rtc", "dep:bytes"]
channels-webrtc-advanced = ["channels-webrtc", "dep:rtc-interceptor", "dep:rtc-ice"]
# LAN inspection tooling — NIC enumeration, IP config, ARP discovery, port scanning
lan = ["dep:network-interface", "dep:ipnetwork", "dep:pnet", "dep:pnet_datalink"]

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "network_manager"
required-features = ["client", "ipc-transport"]

[[example]]
name = "host_discovery"
required-features = ["lan"]

[[example]]
name = "port_scan"
required-features = ["lan"]

[[example]]
name = "network_interfaces"
required-features = ["lan"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
