[package]
name = "brainwires-permission"
description = "Permission policies, audit logging, and trust profiles for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-permission"
keywords = ["permissions", "access-control", "security", "trust", "audit"]
categories = ["development-tools"]

[dependencies]
# Internal crates
brainwires-core.workspace = true
brainwires-telemetry = { workspace = true, default-features = false }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Config parsing
toml.workspace = true

# Error handling
anyhow.workspace = true

# Time
chrono.workspace = true

# Identifiers
uuid = { workspace = true }

# Async (for approval oneshot channels)
tokio = { workspace = true }

# Pattern matching (native only)
glob = { workspace = true, optional = true }

# Filesystem (native only)
dirs = { workspace = true, optional = true }

[features]
default = ["native"]
native = ["dep:glob", "dep:dirs"]
wasm = ["brainwires-core/wasm"]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
proptest.workspace = true

[[example]]
name = "policy_engine"
required-features = ["native"]

[[example]]
name = "trust_audit"
required-features = ["native"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
