[package]
name = "brainwires-prompting"
description = "Adaptive prompting techniques, K-means task clustering, and temperature optimization for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
documentation = "https://docs.rs/brainwires-prompting"
keywords = ["prompting", "clustering", "ai-agents", "framework"]
categories = ["development-tools"]

[lib]
name = "brainwires_prompting"
path = "src/lib.rs"

[dependencies]
brainwires-core = { workspace = true }

tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

# Serialization / errors / time
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Clustering
linfa = { workspace = true }
linfa-clustering = { workspace = true }
ndarray = { workspace = true }
bincode = { workspace = true }

# Optional persistence (SQLite-backed cluster store)
rusqlite = { workspace = true, optional = true }

# Optional integration with the BKS/PKS knowledge layer (used by the
# adaptive `PromptGenerator` and the `learning` coordinator).
brainwires-knowledge = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }

[features]
default = ["knowledge"]
storage = ["dep:rusqlite"]
# Most prompting modules (generator, learning, temperature) need BKS/PKS
# from brainwires-knowledge. The standalone bits (clustering, library,
# techniques, seal) work without it. Default-on because the typical
# consumer wants the full surface.
knowledge = ["dep:brainwires-knowledge", "brainwires-knowledge/knowledge"]
# Referenced by src/clustering.rs cfg gates that toggle k-means helpers.
# Empty placeholder so the cfg gates resolve under -Dwarnings.
prompting = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
