[package]
name = "brainwires-rag"
description = "Codebase indexing + hybrid retrieval (vector + BM25) for the Brainwires Agent Framework. Includes AST-aware chunking via tree-sitter (12 languages), Git history search, and reranking via spectral diversity / cross-encoder."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
documentation = "https://docs.rs/brainwires-rag"
keywords = ["rag", "code-search", "embeddings", "tree-sitter", "lancedb"]
categories = ["development-tools"]

[lib]
name = "brainwires_rag"
path = "src/lib.rs"

[dependencies]
# Internal
brainwires-core = { workspace = true, features = ["native", "schemars"] }
brainwires-storage = { workspace = true, features = ["native", "lance-backend"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { workspace = true }

# Time / IDs / regex / logging
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Storage backends
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

# Filesystem / paths
walkdir = { workspace = true }
dirs = "6"
sha2 = { workspace = true }
ignore = { workspace = true }
fs2 = "0.4"

# Code search & indexing
git2 = { workspace = true }
toml = { workspace = true }
rayon = "1.10"

# AST chunking — tree-sitter + grammars (always-on; 12 languages)
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"

# Spectral reranking (folded in — pure-internal subdomain)
ndarray = { workspace = true }

# MCP server bindings — used by `rag::client` for progress reporting +
# the rag-server CLI.
rmcp = { version = "1.1", features = ["server", "transport-io", "macros"] }
schemars = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }

# PDF document extraction
pdf-extract = { version = "0.10", optional = true }
zip = { version = "8", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }

[features]
default = []

# Document processing (PDF / DOCX-zip extraction)
documents = ["dep:zip"]
pdf-extract-feature = ["dep:pdf-extract"]

# Vector backend selection (forwarded to storage)
qdrant-backend = ["brainwires-storage/qdrant-backend"]

# Referenced by src/rag/client/fs_lock.rs to allow alternate-folder
# rebrand builds. Empty placeholder so the cfg gates resolve under
# -Dwarnings.
alt-folder-name = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
