[package]
name = "brainwires-reasoning"
description = "Layer 3 reasoning — plan/output parsers + provider-agnostic local-inference scorers (router, complexity, relevance, retrieval, strategy, summariser, validator, entity enhancer) for the Brainwires Agent Framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-reasoning"
keywords = ["reasoning", "plan-parsing", "output-parsing", "llm", "prompting"]
categories = ["development-tools"]

[dependencies]
brainwires-core = { workspace = true }
brainwires-tool-runtime = { workspace = true }

# Async primitives used by scorers
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Parsing
regex = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
proptest.workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
