[package]
name = "brainwires-sandbox"
description = "Container-based sandboxing (Docker/Podman/host) for tool execution in the Brainwires framework"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/brainwires-sandbox"
keywords = ["sandbox", "docker", "security", "containers", "isolation"]
categories = ["development-tools"]

[dependencies]
# Internal crates
brainwires-core.workspace = true

# Async
async-trait.workspace = true
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Identifiers
uuid = { workspace = true }

# Docker/Podman client (optional)
bollard = { version = "0.17", optional = true }
futures = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[features]
default = ["docker"]
docker = ["dep:bollard", "dep:futures", "dep:bytes"]
podman = ["docker"]
unsafe-host = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
